# cpp-arm64-baremetal-machine-learning-playground

./: .gitignore  README.md  build.cmd  install-packages.cmd  main.c  raw-build.cmd  requirements.txt  run.cmd  setup.cmd  startup.s  tbuildscript.py
.github/workflows/: build.yml
references/: CMakeLists.txt
